--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -3,7 +3,6 @@
   height: 45px;
   border-radius: 8px;
   color: #495057;
-  font-family: Poppins;
   font-size: 13px;
   font-weight: 600;
   letter-spacing: 0.01em;
@@ -11,15 +10,28 @@
   align-items: center;
   padding: 15px 16px;
   border: 1px solid transparent;
+  text-transform: capitalize;
 }
 
 .link:hover:not(:global(.active)) {
-  background: linear-gradient(128.18deg, #a43ce4 13.94%, #a72b6d 84.49%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #a43ce4;
 }
 
 .link:global(.active) {
   background: linear-gradient(128.18deg, #a43ce4 13.94%, #a72b6d 84.49%);
   color: white;
+}
+
+/** SVG coloring */
+
+.link svg path {
+  fill: #495057;
+}
+
+.link:global(.active) svg path {
+  fill: white;
+}
+
+.link:hover:not(:global(.active)) svg path {
+  fill: #a43ce4;
 }
