--- a/src/components/CryptoTabs.module.css
+++ b/src/components/CryptoTabs.module.css
@@ -1,18 +1,25 @@
 .tabs {
   display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 23px;
 }
 
 .tabs li {
-  border-style: solid;
+  /* border-style: solid;
   border-top: 0;
   border-left: 0;
   border-right: 0;
   border-bottom: 3px;
-  border-image: linear-gradient(to right, #a43ce4, #a72b6d);
+  border-image: linear-gradient(to right, #a43ce4, #a72b6d); */
+  flex-grow: 1;
+}
+
+.tabs li:last-child {
+  flex-grow: 2;
+  text-align: right;
 }
 
 .link {
-  width: 180px;
   height: 33px;
   color: #495057;
   font-size: 13px;
