--- a/src/components/CryptoTabs.module.css
+++ b/src/components/CryptoTabs.module.css
@@ -15,8 +15,11 @@
 }
 
 .tabs li:last-child {
+  display: flex;
+  position: relative;
   flex-grow: 2;
-  text-align: right;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .link {
@@ -41,4 +44,42 @@
   background: linear-gradient(128.18deg, #a43ce4 13.94%, #a72b6d 84.49%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.ellipsis svg {
+  width: 16px;
+  cursor: pointer;
+}
+
+.ellipsisMenu {
+  position: absolute;
+  min-width: 280px;
+  top: 4px;
+  right: 20px;
+  padding: 7px;
+  background: #fff;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
+}
+
+.menuBtn {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  border: 0;
+  background-color: transparent;
+  border-radius: 8px;
+  padding: 10px 17px;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.menuBtn:hover {
+  background-color: #e9e9f4;
+}
+
+.menuBtn .icon {
+  height: 20px;
+  margin-right: 20px;
 }
