--- a/src/components/Timespan.module.css
+++ b/src/components/Timespan.module.css
@@ -1,12 +1,15 @@
 .container {
   display: flex;
-  font-size: 14px;
-  font-weight: 600;
   align-items: center;
   border: 1px solid #e9e9f4;
   border-radius: 12px;
-  padding: 8px 11px;
+  padding: 0 11px;
   height: 36px;
+}
+
+.container button {
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .dot {
@@ -26,7 +29,10 @@
 }
 
 .live {
-  margin-right: 6px;
+  margin: 0 6px 0 0;
+  border: 0;
+  padding: 0;
+  background: transparent;
 }
 
 .live:global(.active) {
@@ -34,8 +40,12 @@
 }
 
 .listItem {
+  height: 20px;
   padding: 0 4px;
   border-radius: 4px;
+  border: 0;
+  margin: 0;
+  background: transparent;
 }
 
 .listItem:not(:last-child) {
