--- a/src/components/CryptoTabs.module.css
+++ b/src/components/CryptoTabs.module.css
@@ -56,6 +56,8 @@
   border: 0;
   padding: 0;
   background: transparent;
+  margin-right: 15px;
+  height: 16px;
 }
 
 .ellipsis svg {
@@ -67,7 +69,7 @@
   position: absolute;
   min-width: 280px;
   top: 4px;
-  right: 20px;
+  right: 36px;
   padding: 7px;
   background: #fff;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
